8/26/10 restore ordering of control panel
# 0.00.25 (43537) Aug 26, 2010
8/26/10 interview version that has Views above Tests in control panel
8/26/10 clean up light bulb icon
8/26/10 clean up pixels along the left and right edges of the light bulb image
8/25/10 delete stubs for Save/Load feature, not needed in this sim
8/25/10 move beaker location to (0,0)
8/25/10 reorganize and document ABSConstants (no values changed)
8/25/10 move some constants from ABSConstants to MoleculesNode
8/25/10 change Molecule.getIcon to Molecule.getImage (it returns an Image, not an Icon)
8/25/10 simplify implementation of MoleculesNode, there was a lot of stuff in here to support unneeded dev controls
8/25/10 delete rendering order strategy for molecules in magnifying glass, we decided on one implementation
8/25/10 clean up constants related to magnifying glass view
8/25/10 fix arg names in IMoleculeLayeringStrategy, they were acid-specific
8/25/10 make control panels use standardized titled border from phetcommon (PhetTitledBorder)
8/25/10 use bold for TitledBorder fonts
# 0.00.24 (43464) Aug 25, 2010
8/25/10 change "Show Water" check box to "Show Solvent"
8/23/10 created screenshot that will appear on website
8/23/10 consolidate module package hierarchy
8/23/10 rename TestSolutionModule to IntroductionModule
8/23/10 delete ABSCanvas subclasses that add no additional functionality
8/23/10 migrate PrecisionDecimal to phetcommon
8/23/10 migrate HTMLCheckBox to phetcommon
8/23/10 misc javadoc and cleanup
8/23/10 this sim doesn't need a clock, remove clock from model interfaces, pause clock in all modules
# 0.00.23 (43391) Aug 23, 2010
8/23/10 handle disabling of water icon next to "Show Water" check box
8/23/10 simplify AbstractConcentrationGraphNode by removing unnecessary inner classes and unused features
8/23/10 change "Magnifying Glass" radio button to "Molecules"
8/23/10 change "Show H2O molecules" check box to "Show Water"